--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,6 @@ spring:
 mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    #开启映射
     map-underscore-to-camel-case: true
   mapper-locations: classpath:mapper/*.xml
