--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
     <artifactId>jaxb-runtime</artifactId>
     <version>2.3.3</version>
 </dependency>
+<!-- jwt令牌 -->
+ <dependency>
+    <groupId>io.jsonwebtoken</groupId>
+    <artifactId>jjwt</artifactId>
+    <version>0.12.6</version>
+</dependency>
 	</dependencies>
 
 	<build>
